# 2d_clac

./: CMakeLists.txt  global.h  main.c
src/: basis.c  chemistry.c  main.c  parameters.c  physics.c  test.c  utils.c
src/include/: basis.h  chemistry.h  global.h  parameters.h  physics.h  utils.h
